--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,14 +3,16 @@
 ---
 
 <html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Astro</title>
-	</head>
-	<body>
-		<h1>Astro</h1>
-	</body>
+  <head>
+    <meta charset="utf-8" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <meta name="viewport" content="width=device-width" />
+    <meta name="generator" content={Astro.generator} />
+    <title>did:web:web.mmatt.net</title>
+  </head>
+  <body>
+    view contents on <a href="https://pdsls.dev/at://did:web:web.mmatt.net"
+      >pdsls</a
+    >.
+  </body>
 </html>
